# NoteKeeper

./: CMakeLists.txt  README.md  StyleSheets.h  calendar.cpp  calendar.h  database.cpp  database.h  elidedlabel.cpp  elidedlabel.h  frameclickable.cpp  frameclickable.h  mainwindow.cpp  mainwindow.h  notedlg.cpp  notedlg.h
